Commit 10 : "neural_network"

--- a/Chess/neural_network.ipynb
+++ b/Chess/neural_network.ipynb
@@ -233,7 +233,7 @@
     "\n",
     "class ChessEngine():\n",
     "    \n",
-    "    def __init__(self,algorithms = [NeuralNetwork]):\n",
+    "    def __init__(self,algorithms = [NeuralNetwork,]):\n",
     "        self.algorithms = algorithms\n",
     "    \n",
     "    def generate_move(self,board,side):\n",
